# skill-passport

./: .env.example  .gitignore  LICENSE  PROJECT_BRIEF.md  README.md  cli.py  design.md  flow.md  implementation.md  prd.md  pyproject.toml  rules.md  schema.md  techspec.md  tracker.md
schemas/: verdict.json
scripts/: report_fixtures.py
skill_passport_core/: __init__.py  ast_tracer.py  classifier.py  fetcher.py  profile.py  reasoner.py  verdict.json
tests/: test_ast_tracer.py  test_classifier.py  test_fetcher_auth.py  test_missing_codex.py  test_package_schema.py  test_reasoner_followup.py  test_web_backend.py
web/backend/: __init__.py  main.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: main.jsx  styles.css
web/frontend/src/components/: AppErrorBoundary.jsx  Brand.jsx
web/frontend/src/pages/: AnalysisPage.jsx  LandingPage.jsx
