[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-passport"
version = "0.1.3"
description = "Read-only static-analysis copilot for public agent skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
skill-passport = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["skill_passport_core*"]

[tool.setuptools.package-data]
skill_passport_core = ["verdict.json"]
